[package]
name = "dioxus-flow"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
dioxus-web = "0.7.3"
web-sys = { version = "0.3", features = [
    "Element",
    "DomRect",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "CssStyleDeclaration",
    "HtmlElement",
    "Window",
    "Document",
    "PointerEvent",
    "WheelEvent",
    "MouseEvent",
    "KeyboardEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
dioxus = { version = "0.7.3", features = ["web"] }

[features]
default = []

[[example]]
name = "basic"
path = "examples/basic.rs"
